--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
         <activity android:name=".MainActivity"
             android:screenOrientation="landscape" />
+        <activity android:name=".EndActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
