--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
         <activity android:name=".MainActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".EndActivity"
+        <activity android:name=".ResultActivity"
             android:screenOrientation="landscape" />
     </application>
 
